# software_development

./: .gitignore  CLAUDE.md  DEMO.md  Dockerfile  README.md  demo_full_pipeline.py  demo_test_multi.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: main.py
backend/api/: auth.py  data.py  deployments.py  experiments.py  models.py  monitoring.py  system.py
backend/core/: auth.py  config.py  dependencies.py  middleware.py
backend/models_db/: base.py  dataset.py  experiment.py  model.py  user.py
backend/services/: data_service.py  deployment_service.py  local_serving.py  model_service.py  monitoring_service.py  ray_serve_manager.py  training_queue.py  training_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_data.py  test_deployments.py  test_e2e_training.py  test_experiments.py  test_ids_endpoints.py  test_models.py  test_monitoring.py  test_multi_enqueue.py  test_training_queue.py
backend/workflows/: run_worker.py  training_workflow.py
cli/: pyproject.toml
cli/ml_platform_cli/: config.py  main.py
demo/: presentation.html
demo/diagrams/: architecture.mmd  auth-flow.mmd  data-flow.mmd  er-diagram.mmd  model-deploy.mmd  training-internals.mmd  training-queue.mmd
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/data/: page.tsx
frontend/app/deployments/: page.tsx
frontend/app/experiments/: page.tsx
frontend/app/experiments/[id]/: page.tsx
frontend/app/models/: page.tsx
frontend/app/monitoring/: page.tsx
frontend/app/pipeline/[id]/: page.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/pipeline-editor/: NodeConfigPanel.tsx  NodePalette.tsx  PipelineEditor.tsx  PipelineNode.tsx  types.ts
frontend/lib/: api.ts
infra/: prometheus.yml
sdk/: pyproject.toml
sdk/ml_platform/: __init__.py  auth.py  client.py  data.py  deployments.py  experiments.py  models.py  monitoring.py  system.py
sdk/tests/: conftest.py  test_client.py  test_data.py  test_experiments.py
