[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-platform"
version = "0.1.0"
description = "Python SDK for the ML Platform — low-code MLOps for business analysts"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ml_platform"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
